--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,61 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monahan's Website</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{url_for('static', filename='css/general.css')}}">
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-        <a class="navbar-brand" href="#" >CoMon</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#about-section">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#exp-section">Experience</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#proj-section">Projects</a>
-            </li>
-            </ul>
-        </div>
-        </div>
-    </nav>
+{% extends "parent-templates/base-content.html" %}
+{% block title %}Explore Scents{% endblock %}
 
-    <div class="main-container">
-        <h1>Explore Today's Fragrances</h1>
-        <div class="explore-container">
-        {% for frag in frags %} 
-        <div class="frag-container">
-            <div class="frag-header">
-                <h2>{{frag.perfume}}</h2>
-                <a href="{{frag.url}}">Link</a>
-            </div>
-            <img src="{{frag.image}}">
-            <h3>{{frag.brand}}</h3>
-            <p>{{frag.description}}</p>
-            <div class="frag-notes">
-            {% for note in frag.notes %}
-                <p>{{note}}</p>
-            {% endfor %}
-            </div>
-        </div>
-        {% endfor %}
-        </div>
-    </div>
-    <footer>
-        <a href="#TOP"> Back to Top </a>
-    </footer>
-    </div>
+{% block content %}
 
-</body>
-</html>
+<main>
+    <h1>Hello!</h1>
+</main>
+
+{% endblock %}
