added functionality to retrieve all and/or limited number of frags from db. Continued html and css for index.html

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,4 +1,19 @@
 .prompt-container {
+    padding: 5rem;
+    text-align: center;
+}
+
+.input-container textarea {
+    font-size: 1rem;
+    width: 60%;
+    border: none;
+    resize: none;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    overflow: hidden;
+}
+
+.prompt-container {
     background-color: green;
 }
 
