--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,17 +9,47 @@
     <div class="prompt-container">
         <h1>Find a cologne just for you - just type away!</h1>
         <div class="input-container">
-            <form method="POST" action="/search/desc">
+            <form method="POST" id="chatbox" action="/search/desc">
                 <textarea name="desc" id="desc" placeholder="e.g., vanilla, sweet, with a hint of amber"></textarea>
-                <button type="submit">Search</button>
             </form>
         </div>
     </div>
     <div class="frags-container">
-        frags container
+        {% for frag in frags %} 
+        <div class="frag-container">
+            <div class="frag-header">
+                <h2>{{frag.perfume}}</h2>
+                <a href="{{frag.url}}">Link</a>
+            </div>
+            {% if frag.img %}
+                <img src="{{frag.img}}">
+            {% else %}
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-droplet" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M7.21.8C7.69.295 8 0 8 0q.164.544.371 1.038c.812 1.946 2.073 3.35 3.197 4.6C12.878 7.096 14 8.345 14 10a6 6 0 0 1-12 0C2 6.668 5.58 2.517 7.21.8m.413 1.021A31 31 0 0 0 5.794 3.99c-.726.95-1.436 2.008-1.96 3.07C3.304 8.133 3 9.138 3 10a5 5 0 0 0 10 0c0-1.201-.796-2.157-2.181-3.7l-.03-.032C9.75 5.11 8.5 3.72 7.623 1.82z"/>
+                    <path fill-rule="evenodd" d="M4.553 7.776c.82-1.641 1.717-2.753 2.093-3.13l.708.708c-.29.29-1.128 1.311-1.907 2.87z"/>
+                </svg>
+            {% endif %}
+            <h3>{{frag.brand.name}}</h3>
+            <p>{{frag.desc}}</p>
+            <div class="frag-notes">
+            {% for nt in frag.notes %}
+                <p>{{nt.nt}}</p>
+            {% endfor %}
+            </div>
+            <div class="frag-accs">
+                {% for acc in frag.accords %}
+                    <p>{{acc.acc}}</p>
+                {% endfor %}
+            </div>
+        </div>
+        {% endfor %}
     </div>
     <div class="info-container">
         info container
     </div>
 </main>
+{% endblock %}
+
+{% block scripts %}
+<script src="{{ url_for('static', filename='scripts/chatbox.js')}}"></script>
 {% endblock %}
