--- a/app/static/css/general.css
+++ b/app/static/css/general.css
@@ -17,7 +17,7 @@ body {
 
 footer {
     width: 100%;
-    background-color: darkgreen;
+    background-color: black;
 }
 
 footer a {
@@ -26,7 +26,7 @@ footer a {
 
 .footer-bttn {
     padding: 0.8rem;
-    background-color: green;
+    background-color: #2E073F;
     width: 100%;
     text-align: center;
 }
@@ -39,5 +39,9 @@ footer a {
     align-items: center;
     justify-content: space-evenly;
     padding: 2rem;
+}
+
+.footer-links a {
+    color: white;   
 }
 
