--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,8 @@
             </form>
         </div>
     </div>
-    <div class="frags-container">
+
+    <div class="frags-container spacing">
         {% for frag in frags %} 
         <div class="frag-container">
             <div class="frag-header">
@@ -50,7 +51,8 @@
         </div>
         {% endfor %}
     </div>
-    <div class="info-container">
+
+    <div class="info-container spacing">
         <div class="conc-info">
             {% for typ in concs.values() %}
             <div class="conc-container">
@@ -59,6 +61,9 @@
                 </div>
                 <div class="conc-about">
                     <p class="conc-conc">{{typ.conc}}</p>
+                    <div class="progress">
+                        <div class="progress-bar hello" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" data-per="{{typ.per}}"></div>
+                    </div>
                     <p class="conc-hrs">{{typ.hrs}}</p>
                     <div class="conc-notes">
                         {% for nt in typ.nts %}
@@ -91,4 +96,5 @@
 
 {% block scripts %}
 <script src="{{ url_for('static', filename='scripts/chatbox.js')}}"></script>
+<script src="{{ url_for('static', filename='scripts/index.js')}}" defer></script>
 {% endblock %}
