--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "parent-templates/base-content.html" %}
-{% block title %}Welcome{% endblock %}
+{% block title %}Find A Frag{% endblock %}
 {% block links %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 {% endblock %}
