--- a/app/templates/parent-templates/base-content.html
+++ b/app/templates/parent-templates/base-content.html
@@ -23,6 +23,9 @@
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/all/brands">All Brands</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/summer/frags">Summer</a>
+            </li>
             </ul>
         </div>
         </div>
