--- a/app/templates/parent-templates/base-content.html
+++ b/app/templates/parent-templates/base-content.html
@@ -20,18 +20,41 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/all/brands">All Brands</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/summer/frags">Summer</a>
-            </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/all/brands">All Brands</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Seasons
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="/seasons/frags/fall">Fall</a></li>
+                      <li><a class="dropdown-item" href="/seasons/frags/winter">Winter</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="/seasons/frags/spring">Spring</a></li>
+                      <li><a class="dropdown-item" href="/seasons/frags/summer">Summer</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Gender
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="/gender/frags/men">Men</a></li>
+                      <li><a class="dropdown-item" href="/gender/frags/women">Women</a></li>
+                      <li><a class="dropdown-item" href="/gender/frags/unisex">Unisex</a></li>
+                    </ul>
+                  </li>
             </ul>
+
+
         </div>
         </div>
+
     </nav>
 
     <main class = "main-container">
+
     <!-- Content Block -->
     {% block content %}
     {% endblock %}
