fixed index.css flexbox issues. Fragrance 'cards' are now all the same height, regardless of content size

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -47,7 +47,11 @@
     gap: 0.5rem;
 }
 
-.frags-container,
+.frags-container {
+    justify-content: space-evenly;
+    align-items: stretch;
+}
+
 .conc-info {
     justify-content: space-evenly;
     align-items: start;
@@ -76,6 +80,7 @@
 }
 
 .frag-container {
+    flex: 1;
     text-align: start;
 }
 
