--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -60,11 +60,11 @@
                 <p class="conc-typ">{{typ.type}}</p>
             </div>
             <div class="conc-about">
-                <p class="conc-conc">{{typ.conc}}</p>
-                <div class="progress">
+                <p class="conc-conc">Concentration: {{typ.conc}}</p>
+                <div class="progress mb-4">
                     <div class="progress-bar hello" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" data-per="{{typ.per}}"></div>
                 </div>
-                <p class="conc-hrs">{{typ.hrs}}</p>
+                <p class="conc-hrs">Longevity: {{typ.hrs}}</p>
                 <div class="conc-notes">
                     {% for nt in typ.nts %}
                     <p>{{nt}}</p>
