implemented semantic search using vector similarity. Cosine similarity was used

--- a/app/templates/parent-templates/base-content.html
+++ b/app/templates/parent-templates/base-content.html
@@ -55,6 +55,10 @@
 
     <main class = "main-container">
 
+    <!-- Prompt Block -->
+     {% block prompt %}
+     {% endblock %}
+
     <!-- Content Block -->
     {% block content %}
     {% endblock %}
