--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
     <h1>Find a cologne for you - just type away!</h1>
     <div class="input-container">
         <form method="POST" id="chatbox" action="/search/desc">
-            <textarea name="desc" id="desc" placeholder="e.g., vanilla, sweet, with a hint of amber"></textarea>
+            <textarea name="query" id="desc" placeholder="e.g., vanilla, sweet, with a hint of amber"></textarea>
         </form>
     </div>
 </div>
