--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="prompt-container">
-    <h1>Find a cologne for you - just type away!</h1>
+    <h1 class="heading">Find a cologne for you - just type away!</h1>
     <div class="input-container">
         <form method="POST" id="chatbox" action="/search/desc">
             <textarea name="query" id="desc" placeholder="e.g., vanilla, sweet, with a hint of amber"></textarea>
@@ -15,11 +15,15 @@
     </div>
 </div>
 
+<div class="key-container">
+    <h2 class="key-label heading">Key:</h2><div class="key-nts">Notes</div><div class="key-accs">Accords</div>
+</div>
+
 <div class="frags-container spacing">
     {% for frag in frags %} 
     <div class="frag-container">
         <div class="frag-header">
-            <p class="frag-perf">{{frag.perfume}}</p>
+            <p class="frag-perf heading">{{frag.perfume}}</p>
             <a href="{{frag.url}}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
@@ -53,6 +57,7 @@
 </div>
 
 <div class="info-container spacing">
+    <h2 class="heading heading-basic">Fragrance Types</h2>
     <div class="conc-info">
         {% for typ in concs.values() %}
         <div class="conc-container">
@@ -74,6 +79,7 @@
         </div>
         {% endfor %}
     </div>
+    <h2 class="heading heading-basic">Notes &amp; Accords</h2>
     <div class="scents-info">
         <div class="nts-info">
             <div class="txt-boxes">
