--- a/app/static/css/general.css
+++ b/app/static/css/general.css
@@ -45,3 +45,16 @@ footer a {
     color: white;   
 }
 
+.heading {
+  font-family: "Fugaz One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.heading-basic {
+    color: white;
+}
+
+* {
+   font-family: "PT Sans Narrow", sans-serif;; 
+}
