css changes and css restructuring into more-appropriate files

--- a/app/templates/all-brands.html
+++ b/app/templates/all-brands.html
@@ -11,7 +11,7 @@
     {% for letter, brands in brandSet.items() %}
         <div class="letter-container">
             <div class="letter-header">
-                <h1>{{letter}}</h1>
+                <h1 class="heading">{{letter}}</h1>
             </div>
             <div class="letter-brands">
                 {% for b in brands %}
