--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -62,7 +62,7 @@
         {% for typ in concs.values() %}
         <div class="conc-container">
             <div class="conc-header">
-                <p class="conc-typ">{{typ.type}}</p>
+                <p class="conc-typ heading">{{typ.type}}</p>
             </div>
             <div class="conc-about">
                 <p class="conc-conc">Concentration: {{typ.conc}}</p>
