--- a/app/templates/parent-templates/base-content.html
+++ b/app/templates/parent-templates/base-content.html
@@ -8,7 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     {% block links %}{% endblock %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/general.css')}}">
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/fonts.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/media.css')}}">
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
@@ -18,7 +20,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-        <a class="navbar-brand" href="/home" >F . A . F</a>
+        <a class="navbar-brand heading" href="/home" >F . A . F</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
