--- a/app/static/css/fonts.css
+++ b/app/static/css/fonts.css
@@ -11,3 +11,13 @@
 .heading-basic {
     color: white;
 }
+
+.heading-2 {
+    font-weight:bold;
+    font-size: 115%;
+}
+
+.heading-3 {
+    font-weight:bold;
+    font-size: 105%;
+}
