--- a/app/templates/gendered-frags.html
+++ b/app/templates/gendered-frags.html
@@ -26,7 +26,7 @@
                 {% endif %}
             </div>
             <div class="frag-about">
-                <p class="frag-brand">{{frag.brand.name}}</p>
+                <p class="frag-brand heading-2">{{frag.brand.name}}</p>
                 <p class="frag-desc">{{frag.desc}}</p>
                 <div class="frag-notes">
                 {% for nt in frag.notes %}
