--- a/app/templates/user-query.html
+++ b/app/templates/user-query.html
@@ -10,7 +10,7 @@
         {% for frag in frags %} 
         <div class="frag-container">
             <div class="frag-header">
-                <p class="frag-perf">{{frag.perfume}}</p>
+                <p class="frag-perf heading">{{frag.perfume}}</p>
                 <a href="{{frag.url}}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
@@ -26,7 +26,7 @@
                 {% endif %}
             </div>
             <div class="frag-about">
-                <p class="frag-brand">{{frag.brand.name}}</p>
+                <p class="frag-brand heading-2">{{frag.brand.name}}</p>
                 <p class="frag-desc">{{frag.desc}}</p>
                 <div class="frag-notes">
                 {% for nt in frag.notes %}
