--- a/app/templates/parent-templates/base-content.html
+++ b/app/templates/parent-templates/base-content.html
@@ -72,7 +72,7 @@
 
     <!-- Footer -->
     <footer>
-            <a href="/">
+            <a class="footer-txt" id="scrollToTop">
                 <div class="footer-bttn">
                     Back to Top
                 </div>
@@ -108,6 +108,7 @@
     </footer>
     <!-- Scripts for Bootstrap's JavaScript Functionality -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='scripts/general.js') }}"></script>
 
     {% block scripts %}
     {% endblock %}
