changed default fragrance image

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,7 +35,7 @@
             {% if frag.img %}
                 <img src="{{frag.img}}">
             {% else %}
-                <img src="{{ url_for('static', filename='imgs/DefaultFrag.png') }}">
+                <img src="{{ url_for('static', filename='imgs/DefaultFrag.jpg') }}">
             {% endif %}
         </div>
         <div class="frag-about">
