--- a/app/static/css/general.css
+++ b/app/static/css/general.css
@@ -56,3 +56,26 @@ footer a {
 .footer-links a {
     color: white;   
 }
+
+/* CSS for displayed img when no fragrance-related img is had*/
+.no-img {
+  position: relative;
+}
+
+.no-img img {
+  width: 100%;
+  height: 100%;
+}
+
+.img-txt {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-weight: bold;
+  text-align: center;
+}
