--- a/app/templates/explore-brand.html
+++ b/app/templates/explore-brand.html
@@ -6,6 +6,11 @@
 
 {% block content %}
     <h1 class="explore-title">Explore {{b_name}}</h1>
+
+    <div class="key-container">
+        <h2 class="key-label heading">Key:</h2><div class="key-nts">Notes</div><div class="key-accs">Accords</div>
+    </div>
+
     <div class="frags-grid">
         {% for frag in frags %} 
         <div class="frag-container">
@@ -20,9 +25,12 @@
             </div>
             <div class="frag-img">
                 {% if frag.img %}
-                    <img src="{{frag.img}}">
+                    <img class="true-img" src="{{frag.img}}">
                 {% else %}
-                    <img src="{{ url_for('static', filename='imgs/DefaultFrag.jpg') }}">
+                    <div class="no-img true-img">
+                        <img src="{{ url_for('static', filename='imgs/DefaultFrag.jpg') }}">
+                        <div class="img-txt">No image available</div>
+                    </div>
                 {% endif %}
             </div>
             <div class="frag-about">
